# zen

./: .gitignore  Cargo.toml  main.zen
crates/zen-ast/: Cargo.toml
crates/zen-ast/src/: lib.rs
crates/zen-codegen/: Cargo.toml
crates/zen-codegen/src/c/: intrinsic.rs  mod.rs
crates/zen-lang/: Cargo.toml
crates/zen-lang/src/: lib.rs  sym.rs  ty.rs
crates/zen-lexer/: Cargo.toml
crates/zen-lexer/src/: lib.rs  tests.rs
crates/zen-parser/: Cargo.toml
crates/zen-parser/src/: atoms.rs  lib.rs
crates/zen-semantic/: Cargo.toml
crates/zen-semantic/src/: error.rs  expr.rs  flow.rs  lib.rs  scope.rs  stmt.rs
crates/zen-span/: Cargo.toml
crates/zen-span/src/: lib.rs
examples/: demo.zen  fib.zen  hello.zen
src/: config.rs  main.rs
src/ast/: mod.rs
src/codegen/: mod.rs
src/codegen/c/: compiler.rs  mod.rs
src/codegen/llvm/: mod.rs
src/lang/: mod.rs  operator.rs  types.rs
src/lexer/: mod.rs
src/parser/: atoms.rs  mod.rs
src/semantic/: error.rs  infer.rs  mod.rs  scope.rs  symbol.rs
src/zen-ast/: Cargo.toml
src/zen-ast/src/: lib.rs
src/zen-codegen/src/c/: mod.rs  scope.rs
src/zen-lang/: Cargo.toml
src/zen-lang/src/: lib.rs
src/zen-lexer/: Cargo.toml
src/zen-lexer/src/: lib.rs
src/zen-parser/: Cargo.toml
src/zen-parser/src/: lib.rs
src/zen-semantic/src/: error.rs  lib.rs  scope.rs  symbol.rs
tests/: final.zen  main.zen
tests/errors/: E001.zen  E002.zen  E003.zen  E004.zen  E005.zen  E006.zen  E007.zen  E008.zen  E009.zen  E010.zen  E011.zen  E012.zen  E013.zen  E014.zen  E015.zen  E016.zen  E017.zen  E018.zen  E019.zen  E020.zen  E021.zen  E022.zen  E023.zen  E024.zen  E025.zen  E026.zen  E027.zen  E028.zen  E029.zen  E030.zen  E031.zen  E032.zen  E033.zen  E034.zen  E035.zen  E036.zen  E037.zen  E038.zen  E039.zen  E040.zen  (+3 more)
tests/programs/: 02.zen  05.zen  06.zen  07.zen
tests/programs/legacy/: 03.zen  04.zen
