[package]
edition = "2024"
name = "zen"
version = "0.1.0"

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }

ariadne = { workspace = true }
chumsky = { workspace = true }

lexer = { path = "crates/zen-lexer", package = "zen-lexer" }
parser = { path = "crates/zen-parser", package = "zen-parser" }
semantic = { path = "crates/zen-semantic", package = "zen-semantic" }
codegen = { path = "crates/zen-codegen", package = "zen-codegen" }

[workspace]
members = [
  "crates/zen-ast",
  "crates/zen-codegen",
  "crates/zen-lang",
  "crates/zen-lexer",
  "crates/zen-parser",
  "crates/zen-semantic",
  "crates/zen-span",
]

[workspace.dependencies]
ariadne = { version = "0.5", features = ["auto-color"] }
chumsky = { version = "0.11" }
bitflags = { version = "2.10" }

[workspace.lints.clippy]
pedantic = "warn"
all = "warn"
